--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "strangers.hackmathon.org.strangersinspace"
         minSdkVersion 21
         targetSdkVersion 24
-        versionCode 1
-        versionName "2.0.0"
+        versionCode 2
+        versionName "1.0.0.a"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
