--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,14 @@
             android:label="@string/title_activity_party_gestures"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <service
-            android:name=".MyFirebaseMessagingService">
+            android:name=".firebase.FirebaseInSpaceService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
 
         <service
-            android:name=".MyFirebaseInstanceIDService">
+            android:name=".firebase.SpaceMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
