--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,24 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'strangersinspace'
+            keyPassword
+            storeFile file('/Users/sreeja/Documents/git/StrangersInSpaceApp/keystore.jks')
+            storePassword
+        }
+    }
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
     defaultConfig {
         applicationId "strangers.hackmathon.org.strangersinspace"
         minSdkVersion 21
         targetSdkVersion 24
-        versionCode 3
-        versionName "1.0.1.a"
+        versionCode 4
+        versionName "1.0.2.a"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
@@ -20,14 +29,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
     compile 'com.android.volley:volley:1.0.0'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
+    compile 'org.apache.commons:commons-lang3:3.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
